# toksmith

./: .gitignore  README.md  inspect_vocab.ipynb  play.ipynb  pyproject.toml
benchmarks/: bench_train.py
scripts/: download_data.py
src/toksmith/: __init__.py  merger.py  pretokenizer.py  tokenizer.py  train.py
tests/: test_load_state.py  test_merger_init.py  test_merger_step.py  test_merger_utils.py  test_pretokenizer.py  test_save_state.py  test_tokenizer.py  test_tokenizer_encode.py  test_tokenizer_train.py  test_tokenizer_train_from_file.py  test_tokenizer_utils.py  test_train.py  test_train_run.py  test_train_utils.py
