[project]
name = "toksmith"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alexey Demyanchuk", email = "demyanchuk.alexey@mh-hannover.de" }
]
requires-python = ">=3.13"
dependencies = [
    "regex>=2024.11.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "ipykernel>=6.29.5",
  "pytest>=8.3.5",
  "pytest-cov>=6.1.1",
  "ruff>=0.11.9",
]

[tool.ruff]
ignore = ["E501"] # long lines don’t trigger warnings
indent-width = 2
line-length = 200
select = ["E", "F"]

[tool.ruff.format]
exclude = ["generated"]
indent-style = "space"
quote-style = "single"
