[project]
name = "toksmith"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alexey Demyanchuk", email = "demyanchuk.alexey@mh-hannover.de" }
]
requires-python = ">=3.13"
dependencies = [
    "regex>=2024.11.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "ipykernel>=6.29.5",
  "py-spy>=0.4.0",
  "pyperf>=2.9.0",
  "pytest>=8.3.5",
  "pytest-cov>=6.1.1",
  "ruff>=0.11.9",
  "scalene>=1.5.51",
]

[tool.ruff]
lint.ignore = ["E501"] # long lines don’t trigger warnings
lint.select = ["E", "F"]
indent-width = 2
line-length = 200

[tool.ruff.format]
exclude = ["generated"]
indent-style = "space"
quote-style = "single"

[tool.pytest.ini_options]
addopts = "--cov src/ --cov-report term-missing"
